PP-12915: Request stripe test account endpoint
Wire up classes for the `/v1/service/{serivceId}/request-stripe-test-account`
endpoint. An initial test to ensure we've the correct Stripe endpoints are
called.
